# ep-s20-otbr

./: README.md
.github/workflows/: release.yml
docs/: flash.md  homeassistant.md
s20-otbr/: partitions.csv  sdkconfig.defaults
s20-otbr/components/esp_ot_br_server/frontend/: about.html  commission.html  index.html  mesh.html  network.html  ota.html  tools.html  topology.html
s20-otbr/components/esp_ot_br_server/frontend/static/: api.js
s20-otbr/components/esp_ot_br_server/private_include/: esp_br_web_api.h  esp_br_web_base.h
s20-otbr/components/esp_ot_br_server/src/: esp_br_web.c  esp_br_web_api.c  esp_br_web_base.c  esp_br_wifi_config.c  openapi.yaml
s20-otbr/components/nvs_config/: CMakeLists.txt
s20-otbr/components/nvs_config/include/: nvs_config.h
s20-otbr/components/nvs_config/src/: nvs_config.c
s20-otbr/main/: CMakeLists.txt  esp_ot_br.c  esp_ot_config.h  led.c  led.h
